[gd_scene load_steps=19 format=2]

[ext_resource path="res://fonts/詳解字.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/詳解.tres" type="StyleBox" id=2]
[ext_resource path="res://fonts/1.5.1-2.tres" type="StyleBox" id=3]
[ext_resource path="res://fonts/font9.tres" type="DynamicFont" id=4]
[ext_resource path="res://fonts/font8.tres" type="DynamicFont" id=5]
[ext_resource path="res://fonts/答案字.tres" type="DynamicFont" id=6]
[ext_resource path="res://fonts/答案.tres" type="StyleBox" id=7]
[ext_resource path="res://fonts/1.5.1-1.tres" type="StyleBox" id=8]
[ext_resource path="res://fonts/NotoSansTC-VariableFont_wght.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://pic/框框3.png" type="Texture" id=10]
[ext_resource path="res://pic/bg.jpg" type="Texture" id=11]
[ext_resource path="res://script/1.5.2.gd" type="Script" id=12]
[ext_resource path="res://pic/delete1.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 35
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 1
outline_color = Color( 1, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 20.0
content_margin_bottom = 20.0
bg_color = Color( 0.286275, 0.72549, 0.0352941, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 20.0
content_margin_bottom = 20.0
bg_color = Color( 0.882353, 0.882353, 0.882353, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 20.0
content_margin_bottom = 20.0
bg_color = Color( 1, 0.203922, 0.203922, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Node2D" type="Node2D"]
script = ExtResource( 12 )

[node name="bg" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 11 )

[node name="TextureRect" type="TextureRect" parent="bg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -768.0
margin_top = -519.0
margin_right = -214.0
margin_bottom = -69.0
rect_scale = Vector2( 2.8, 2.3 )
texture = ExtResource( 10 )

[node name="content" type="Button" parent="bg"]
margin_left = 310.0
margin_top = 141.0
margin_right = 560.0
margin_bottom = 216.0
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "故 事 內 容"

[node name="wave1" type="Button" parent="bg"]
margin_left = 585.0
margin_top = 141.0
margin_right = 835.0
margin_bottom = 216.0
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "wave 1"

[node name="wave2" type="Button" parent="bg"]
margin_left = 855.0
margin_top = 141.0
margin_right = 1105.0
margin_bottom = 216.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/focus = ExtResource( 8 )
custom_styles/disabled = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
text = "wave 2"

[node name="wave3" type="Button" parent="bg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 165.0
margin_top = -399.0
margin_right = 415.0
margin_bottom = -324.0
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "wave 3"

[node name="回答" type="Label" parent="bg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -295.0
margin_right = -25.0
margin_bottom = -243.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "回答："

[node name="正確" type="Label" parent="bg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -23.0
margin_top = -304.0
margin_right = 127.0
margin_bottom = -231.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "不正確 X"

[node name="問題" type="Label" parent="bg"]
margin_left = 301.0
margin_top = 327.0
margin_right = 1659.0
margin_bottom = 481.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 6 )
custom_styles/normal = ExtResource( 7 )
text = "請問下列何者昨天和李多慧去遊樂園玩?"
align = 1
valign = 1
autowrap = true

[node name="A" type="Label" parent="bg"]
margin_left = 303.0
margin_top = 628.0
margin_right = 943.0
margin_bottom = 728.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 6 )
custom_styles/normal = SubResource( 5 )
text = "C. 侯程麟"
align = 1
valign = 1

[node name="correct" type="Label" parent="bg"]
margin_left = 1019.0
margin_top = 509.0
margin_right = 1659.0
margin_bottom = 609.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 6 )
custom_styles/normal = SubResource( 3 )
text = "B. 吳堃豪"
align = 1
valign = 1

[node name="C" type="Label" parent="bg"]
margin_left = 303.0
margin_top = 509.0
margin_right = 943.0
margin_bottom = 609.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 6 )
custom_styles/normal = ExtResource( 7 )
text = "A. 許馨文"
align = 1
valign = 1

[node name="D" type="Label" parent="bg"]
margin_left = 1019.0
margin_top = 628.0
margin_right = 1659.0
margin_bottom = 728.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 6 )
custom_styles/normal = SubResource( 4 )
text = "D. 王暐睿"
align = 1
valign = 1

[node name="詳解" type="RichTextLabel" parent="bg"]
margin_left = 301.0
margin_top = 750.0
margin_right = 1659.0
margin_bottom = 935.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 1 )
custom_styles/normal = ExtResource( 2 )
text = "解答：C. 侯程麟
詳解：李多慧昨天是和侯程麟去遊樂園玩，在故事內容中第__行可以找到，加上侯程麟跟李多慧是戀人關係，代表李多慧不應該跟其他異性一起去遊樂園。"

[node name="cross" type="Button" parent="bg"]
margin_left = 1789.0
margin_top = 30.0
margin_right = 2301.0
margin_bottom = 536.0
rect_scale = Vector2( 0.2, 0.2 )
icon = ExtResource( 13 )
flat = true

[node name="score" type="Button" parent="bg"]
margin_left = 1400.0
margin_top = 141.0
margin_right = 1650.0
margin_bottom = 216.0
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "score"

[connection signal="pressed" from="bg/content" to="." method="_on_content_pressed"]
[connection signal="pressed" from="bg/wave1" to="." method="_on_wave1_pressed"]
[connection signal="pressed" from="bg/wave2" to="." method="_on_wave2_pressed"]
[connection signal="pressed" from="bg/wave3" to="." method="_on_wave3_pressed"]
[connection signal="pressed" from="bg/cross" to="." method="_on_cross_pressed"]
[connection signal="pressed" from="bg/score" to="." method="_on_score_pressed"]
